# gitplz

./: .gitignore  Cargo.toml  LICENSE  README.md
.cargo/: config.toml
color_printer/: Cargo.toml
color_printer/src/: lib.rs
command/: Cargo.toml  build.rs
command-derive/: Cargo.toml
command-derive/src/: lib.rs
command/src/: branch_delete.rs  branch_find.rs  checkout.rs  command.rs  fetch.rs  lib.rs  reset.rs  status.rs  worktype.rs
command_derive/: Cargo.toml
command_derive/src/: lib.rs
command_mods/: Cargo.toml
command_mods/src/: lib.rs
gitlib/: Cargo.toml
gitlib/src/: credentials.rs  lib.rs  manifest.rs  manifest_iter.rs  reference.rs  repo.rs  repo_iter.rs  status_entry.rs  status_entry_iter.rs  statuses.rs
libs/gitlib/: Cargo.toml
libs/gitlib/src/: lib.rs  reference.rs  repo.rs  status_entry.rs  status_entry_iter.rs  status_iter.rs  statuses.rs
libs/util/: Cargo.toml
libs/util/src/: lib.rs  manifest.rs  manifest_iter.rs  repo_iter.rs  repo_iter_state.rs
manifestlib/: Cargo.toml
manifestlib/src/: lib.rs  manifest.rs  manifest_iter.rs
src/: checkout.rs  cli.rs  common.rs  dispatcher.rs  git.rs  main.rs  printer.rs  printopts.rs  process.rs  status.rs  worktype.rs
ssh_config/: Cargo.toml
ssh_config/src/: lib.rs
util/: Cargo.toml
util/src/: lib.rs  repo_iter.rs  repo_iter_state.rs
