cargo-features = ["edition"]

[package]
edition = "2018"
name = "git-plz"
version = "0.6.0"
authors = ["Kyle Gretchev <kgretchev@gmail.com>"]

[workspace]

[dependencies]
atty = "0.2.11"
color_printer = { path = "color_printer" }
command = { path = "command" }
gitlib = { path = "gitlib" }
structopt = { version = "0.2.10", default-features = false, features = [ "suggestions" ] }
threadpool = "1.7.1"
util = { path = "util" }