[package]
edition = "2018"
name = "command_derive"
version = "0.1.0"
authors = ["Kyle Gretchev <kyle.gretchev@magnetforensics.com>"]

[lib]
proc-macro = true

[dependencies]
quote = "0.6.8"
syn = { version = "0.14.9", default-features = false, features = [ "derive", "full", "parsing", "printing", "visit", "visit-mut", "fold", "clone-impls", "extra-traits", "proc-macro" ] }
