[package]
edition = "2018"
name = "command_derive"
version = "0.1.0"
authors = ["Kyle Gretchev <kgretchev@gmail.com>"]

[lib]
proc-macro = true

[dependencies]
quote = "0.6.11"

[dependencies.syn]
version = "0.15.26"
default-features = false
features = [
    "derive",
    "full",
    "parsing",
    "printing",
    "visit",
    "visit-mut",
    "fold",
    "clone-impls",
    "extra-traits",
    "proc-macro"
]
